--- a/sdk/template/ci.yml
+++ b/sdk/template/ci.yml
@@ -34,7 +34,7 @@ extends:
   template: ../../eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: template
-    BuildTargetingString: azure-template
+    BuildTargetingString: "azure-template"
     ValidateFormatting: true
     Artifacts:
     - name: azure-template
