fix the issue with the parameter going wrong

--- a/eng/pipelines/templates/stages/archetype-sdk-client.yml
+++ b/eng/pipelines/templates/stages/archetype-sdk-client.yml
@@ -109,7 +109,7 @@ extends:
               AfterTestSteps: ${{ parameters.AfterTestSteps }}
               BeforePublishSteps: ${{ parameters.BeforePublishSteps }}
               TestMarkArgument: ${{ parameters.TestMarkArgument }}
-              BuildTargetingString: ${{ parameters.BuildTargetingString }}'
+              BuildTargetingString: ${{ parameters.BuildTargetingString }}
               TestTimeoutInMinutes: ${{ parameters.TestTimeoutInMinutes }}
               ToxEnvParallel: ${{ parameters.ToxEnvParallel }}
               InjectedPackages: ${{ parameters.InjectedPackages }}
