--- a/eng/pipelines/templates/stages/archetype-python-release.yml
+++ b/eng/pipelines/templates/stages/archetype-python-release.yml
@@ -16,7 +16,7 @@ stages:
     - ${{ each artifact in parameters.Artifacts }}:
         - stage:
           displayName: 'Release: ${{artifact.name}}'
-          dependsOn: ${{parameters.DependsOn}}
+          dependsOn: "${{parameters.DependsOn}}"
           condition: and(succeeded(), ne(variables['SetDevVersion'], 'true'), ne(variables['Skip.Release'], 'true'), ne(variables['Build.Repository.Name'], 'Azure/azure-sdk-for-python-pr'))
           jobs:
             - deployment: TagRepository
