surround with quotes?

--- a/eng/pipelines/templates/stages/archetype-python-release.yml
+++ b/eng/pipelines/templates/stages/archetype-python-release.yml
@@ -259,8 +259,8 @@ stages:
         #         Artifact: ${{ artifact }}
 
   - stage: Integration
-    dependsOn: ${{parameters.DependsOn}}
-    condition: succeededOrFailed(${{parameters.DependsOn}})
+    dependsOn: "${{parameters.DependsOn}}"
+    condition: succeededOrFailed("${{parameters.DependsOn}}")
     jobs:
       - job: PublishPackages
         displayName: "Publish package to daily feed"
